# defendai-sdk

./: LICENSE  README.md  pyproject.toml
src/defendai_sdk/: __init__.py  activities.py  client.py  domain_list.py  health.py  high_risk_config.py  known_apps.py  verdict.py
