[project]
name = "defendai-sdk"
version = "0.1.0"
description = "DefendAI Wawsdb platform SDK: connection, auth, domain-list, verdict, activities, and health check"
authors = [{name = "DefendAI Tech Inc", email = "support@defendai.tech"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/defendai_sdk"]
